--- a/assets/Cargo.toml
+++ b/assets/Cargo.toml
@@ -9,3 +9,4 @@ serde = { version = "1.0.203", features = ["derive"] }
 serde_json = "1.0"
 glob = "0.3.1"
 log = "0.4.22"
+phf = { version = "0.11", features = ["macros"] }
